// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assign seat presentational renders correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <RoomPicker
    rooms={
      Array [
        Object {
          "id": 1,
          "info": "CoolerMaster",
          "name": "Coolio",
          "seats": Object {
            "count": 0,
            "seats": Array [],
          },
        },
        Object {
          "id": 2,
          "info": "NZXT",
          "name": "420",
          "seats": Object {
            "count": 1,
            "seats": Array [
              Object {
                "id": "bc2",
                "info": "WARNING: Seat is actually a dildo if you are brave enough",
                "roomId": 2,
              },
            ],
          },
        },
      ]
    }
    setSelected={[Function]}
  />
  <SeatPicker
    setSelected={[Function]}
  />
  <KnappBase
    autoDisableVedSpinner={true}
    className={null}
    disabled={true}
    htmlType="submit"
    id="submit-application"
    inaktivKlasseVedDisabled={false}
    mini={false}
    spinner={false}
    type="hoved"
  >
    Submit
  </KnappBase>
</form>
`;

exports[`assign seat presentational renders nothing correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <RoomPicker
    rooms={Array []}
    setSelected={[Function]}
  />
  <SeatPicker
    setSelected={[Function]}
  />
  <KnappBase
    autoDisableVedSpinner={true}
    className={null}
    disabled={true}
    htmlType="submit"
    id="submit-application"
    inaktivKlasseVedDisabled={false}
    mini={false}
    spinner={false}
    type="hoved"
  >
    Submit
  </KnappBase>
</form>
`;
